Shear widget is not update when the pivot point changes #69797

Closed
opened 2019-09-12 14:25:11 +02:00 by Michael Soluyanov · 5 comments

System Information
Operating system: Linux-4.15.0-60-generic-x86_64-with-debian-buster-sid 64 Bits
Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 390.116

Blender Version
Broken: version: 2.81 (sub 10), branch: master, commit date: 2019-09-11 21:31, hash: 1e375ab5a1

Short description of error
Shear widget is not updated when the pivot point changes

Exact steps for others to reproduce the error

  1. In new scene go to edit mode. Chose Shear active tool.
  2. Change pivot point
  3. Shear widget will stay in place, like pivot point was not changed.

{F7739454, size=full}

**System Information** Operating system: Linux-4.15.0-60-generic-x86_64-with-debian-buster-sid 64 Bits Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 390.116 **Blender Version** Broken: version: 2.81 (sub 10), branch: master, commit date: 2019-09-11 21:31, hash: `1e375ab5a1` **Short description of error** Shear widget is not updated when the pivot point changes **Exact steps for others to reproduce the error** 1. In new scene go to edit mode. Chose Shear active tool. 2. Change pivot point 3. Shear widget will stay in place, like pivot point was not changed. {[F7739454](https://archive.blender.org/developer/F7739454/Peek_2019-09-12_15-19.gif), size=full}
Author
Member

Added subscriber: @crantisz

Added subscriber: @crantisz

Added subscribers: @ideasman42, @mano-wii

Added subscribers: @ideasman42, @mano-wii
Campbell Barton was assigned by Germano Cavalcante 2019-09-17 14:03:40 +02:00

@ideasman42, do you know what may be happening?

@ideasman42, do you know what may be happening?
Michael Soluyanov changed title from Shear widget is not updated when the pivot point changes to Shear widget is not update when the pivot point changes 2019-09-17 14:12:01 +02:00

This issue was referenced by 3794d9ef6e

This issue was referenced by 3794d9ef6e4d779e34e0867c2658b5ecf96886a5

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#69797
No description provided.