Fix T69797: Shear gizmo doesn't update on pivot point change